# caustic3-vita

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
docs/: AI_ASSISTANCE.md  ARCHITECTURE.md  BUILDING.md  CONTROLS.md  FEATURES.md  INSTALLING.md  LEGAL.md  TESTING.md
docs/audit/2026-07-13/: clean-sweep.md  coverage.json  findings.json  hardening.md  report.md
lib/FalsoJNI/: FalsoJNI_ImplBridge.c  FalsoJNI_ImplBridge.h  converter.c
lib/libc_bridge/: CMakeLists.txt  nids.yml
lib/so_util/: so_util.c  so_util.h
sce_sys/livearea/contents/: template.xml
scripts/: build-vpk.sh  verify-public-tree.sh
src/: apk_extract.c  apk_extract.h  dynlib.c  falsojni_impl.c  log.c  log.h  main.c
src/reimpl/: fortify.c  fortify.h  io.c  io.h  math_bridge.c  math_bridge.h  mem.c  path_policy.c  path_policy.h  pthr.c
src/utils/: dialog.h  glutil.c
tests/: path_policy_test.c
